Add filter models by brand

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div class="container">
-  <app-navbar></app-navbar>
+  <div class="mb-3">
+    <app-navbar></app-navbar>
+  </div>
+
   <!-- <app-home-page [title]="title"></app-home-page> -->
   <router-outlet></router-outlet>
 </div>
