--- a/src/app/components/models-list/models-list.component.html
+++ b/src/app/components/models-list/models-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <ng-template ngFor let-model [ngForOf]="filteredModels">
-    <div *ngIf="!model.brand.discontinued" class="col mb-3">
+    <div class="col mb-3">
       <app-model-card [model]="model"></app-model-card>
     </div>
   </ng-template>
