Add modular architecture

--- a/src/app/features/models/components/model-card/model-card.component.html
+++ b/src/app/features/models/components/model-card/model-card.component.html
@@ -2,7 +2,7 @@
   <div class="card-body">
     <h5 class="card-title">{{ model.name }}</h5>
     <p class="card-text">
-      {{ model.brand.name }}
+      {{ model.brandName }}
     </p>
     <a href="#" class="btn btn-primary">{{ model.dailyPrice }} $</a>
   </div>
