--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -6,6 +6,6 @@
     <app-brands-list></app-brands-list>
   </div>
   <div class="col">
-    <!-- <app-models-list></app-models-list> -->
+    <app-models-list></app-models-list>
   </div>
 </div>
