--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,1 +1,6 @@
-<p>login-page works!</p>
+<div class="text-center">
+  <main class="form-signin w-50 mx-auto my-5">
+    <h1 class="display-1 mb-5">Sign in</h1>
+    <app-login-form></app-login-form>
+  </main>
+</div>
