--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,11 +1,14 @@
-<h1>{{ title }} app is running!!</h1>
-<p>{{ overlayText }}</p>
+<app-main-layout>
+  <!-- Component bazlı layout yöntemi -->
+  <h1>{{ title }} app is running!!</h1>
+  <p>{{ overlayText }}</p>
 
-<div class="row mt-4">
-  <div class="col-3">
-    <app-brands-list></app-brands-list>
+  <div class="row mt-4">
+    <div class="col-3">
+      <app-brands-list></app-brands-list>
+    </div>
+    <div class="col">
+      <app-models-list></app-models-list>
+    </div>
   </div>
-  <div class="col">
-    <app-models-list></app-models-list>
-  </div>
-</div>
+</app-main-layout>
