--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,4 @@
-<div class="w-100 p-5 bg-dark text-light">footer works!</div>
+<div class="w-100 p-5 bg-dark text-light">
+  <p>footer works!</p>
+  <a routerLink="/dashboard">Dashboard</a>
+</div>
